--- a/contact.html
+++ b/contact.html
@@ -5,8 +5,6 @@
   <title>OnlineShop - Contact</title>
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-  <script type="text/javascript" src="./assets/js/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="./assets/scripts/script.js"></script>
 </head>
 <body>
   <header>
@@ -27,7 +25,7 @@
                 <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
                 <i class="fa fa-shopping-cart fa-stack-1x"></i>
               </span>
-              <span class="count"></span>
+              <span class="count">3</span>
             </a>
           </li>
         </ul>
@@ -59,7 +57,11 @@
     </article>
   </main>
   <footer>
-    <p>Par Emilie Brouillard et Jessica Favin</p>
+    <p>Par Antoine Béland et Konstantinos Lambrou-Latreille</p>
   </footer>
+  <script type="text/javascript" src="./assets/js/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="./assets/scripts/utils.js"></script>
+  <script type="text/javascript" src="./assets/scripts/shopping-cart.service.js"></script>
+  <script type="text/javascript" src="./assets/scripts/shopping-cart.controller.js"></script>
 </body>
 </html>
