--- a/product.html
+++ b/product.html
@@ -5,8 +5,6 @@
   <title>OnlineShop - Produit</title>
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-  <script type="text/javascript" src="./assets/js/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="./assets/scripts/product.js"></script>
 </head>
 <body>
   <header>
@@ -27,7 +25,7 @@
                 <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
                 <i class="fa fa-shopping-cart fa-stack-1x"></i>
               </span>
-              <span class="count"></span>
+              <span class="count">3</span>
             </a>
           </li>
         </ul>
@@ -35,11 +33,11 @@
     </div>
   </header>
   <main>
-    <article id="product-page">
-      <h1 id="product-name"></h1>
+    <article>
+      <h1 id="product-name">Produit</h1>
       <div class="row">
         <div class="col">
-			<img id="product-image" src="" alt="">
+          <img alt="product" src="#" id="product-image">
         </div>
         <div class="col">
           <section>
@@ -52,9 +50,9 @@
             </ul>
           </section>
           <hr>
-          <form class="pull-right" id="add-to-cart-form" method="POST">
+          <form class="pull-right" id="add-to-cart-form">
             <label for="product-quantity">Quantité:</label>
-            <input class="form-control" id="product-quantity" type="number" value="1" min="1">
+            <input class="form-control" type="number" value="1" min="1" id="product-quantity">
             <button class="btn" title="Ajouter au panier" type="submit">
               <i class="fa fa-cart-plus"></i>&nbsp; Ajouter
             </button>
@@ -62,13 +60,20 @@
           <p>Prix: <strong id="product-price"></strong></p>
         </div>
       </div>
-      <div id="dialog">
-		  <p>Le produit a été ajouté au panier.</p>
+      <div class="dialog" id="dialog">
+        Le produit a été ajouté au panier.
       </div>
     </article>
   </main>
   <footer>
-    <p>Par Emilie Brouillard et Jessica Favin</p>
+    <p>Par Antoine Béland et Konstantinos Lambrou-Latreille</p>
   </footer>
+
+  <script type="text/javascript" src="./assets/js/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="./assets/scripts/utils.js"></script>
+  <script type="text/javascript" src="./assets/scripts/products.service.js"></script>
+  <script type="text/javascript" src="./assets/scripts/shopping-cart.service.js"></script>
+  <script type="text/javascript" src="./assets/scripts/shopping-cart.controller.js"></script>
+  <script type="text/javascript" src="./assets/scripts/product.controller.js"></script>
 </body>
 </html>
