--- a/products.html
+++ b/products.html
@@ -5,8 +5,6 @@
   <title>OnlineShop - Produits</title>
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-  <script type="text/javascript" src="./assets/js/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="./assets/scripts/products.js"></script>
 </head>
 <body>
   <header>
@@ -27,7 +25,7 @@
                 <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
                 <i class="fa fa-shopping-cart fa-stack-1x"></i>
               </span>
-              <span class="count"></span>
+              <span class="count">3</span>
             </a>
           </li>
         </ul>
@@ -39,20 +37,20 @@
       <section>
         <h2>Catégories</h2>
         <div class="btn-group vertical" id="product-categories">
-          <button value="cameras">Appareils photo</button>
-          <button value="consoles">Consoles</button>
-          <button value="screens">Écrans</button>
-          <button value="computers">Ordinateurs</button>
-          <button value="all" class="selected">Tous les produits</button>
+          <button data-category="cameras">Appareils photo</button>
+          <button data-category="consoles">Consoles</button>
+          <button data-category="screens">Écrans</button>
+          <button data-category="computers">Ordinateurs</button>
+          <button data-category="all">Tous les produits</button>
         </div>
       </section>
       <section>
         <h2>Classement</h2>
         <div class="btn-group vertical" id="product-criteria">
-          <button class="selected" value="price-ascending">Prix (bas-haut)</button>
-          <button value="price-descending">Prix (haut-bas)</button>
-          <button value="name-ascending">Nom (A-Z)</button>
-          <button value="name-descending">Nom (Z-A)</button>
+          <button data-criteria="price-asc">Prix (bas-haut)</button>
+          <button data-criteria="price-dsc">Prix (haut-bas)</button>
+          <button data-criteria="alpha-asc">Nom (A-Z)</button>
+          <button data-criteria="alpha-dsc">Nom (Z-A)</button>
         </div>
       </section>
     </section>
@@ -60,11 +58,18 @@
       <span class="right-header" id="products-count">13 produits</span>
       <h1>Produits</h1>
       <div class="products" id="products-list">
+        <div class="loading"></div>
       </div>
     </article>
   </main>
   <footer>
-    <p>Par Emilie Brouillard et Jessica Favin</p>
+    <p>Par Antoine Béland et Konstantinos Lambrou-Latreille</p>
   </footer>
+  <script type="text/javascript" src="./assets/js/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="./assets/scripts/utils.js"></script>
+  <script type="text/javascript" src="./assets/scripts/products.service.js"></script>
+  <script type="text/javascript" src="./assets/scripts/shopping-cart.service.js"></script>
+  <script type="text/javascript" src="./assets/scripts/shopping-cart.controller.js"></script>
+  <script type="text/javascript" src="./assets/scripts/products.controller.js"></script>
 </body>
 </html>
