--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -5,8 +5,6 @@
   <title>OnlineShop - Panier</title>
   <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="./assets/css/style.css">
-  <script type="text/javascript" src="./assets/js/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="./assets/scripts/shopping-cart.js"></script>
 </head>
 <body>
   <header>
@@ -27,7 +25,7 @@
                 <i class="fa fa-circle fa-stack-2x fa-inverse"></i>
                 <i class="fa fa-shopping-cart fa-stack-1x"></i>
               </span>
-              <span class="count"></span>
+              <span class="count">3</span>
             </a>
           </li>
         </ul>
@@ -37,29 +35,33 @@
   <main>
     <article>
       <h1>Panier</h1>
-      <p class="shopping-cart-empty">Aucun produit dans le panier.</p>
-      <div class="shopping-cart-not-empty">
-		  <table class="table shopping-cart-table">
-			<thead>
-			  <tr>
-				<th></th>
-				<th>Produit</th>
-				<th>Prix unitaire</th>
-				<th>Quantité</th>
-				<th>Prix</th>
-			  </tr>
-			</thead>
-			<tbody>
-			</tbody>
-		  </table>
-		  <p class="shopping-cart-total">Total: <strong id="total-amount"></strong></p>
-		  <a class="btn pull-right" href="./order.html">Commander <i class="fa fa-angle-double-right"></i></a>
-		  <button class="btn" id="remove-all-items-button"><i class="fa fa-trash-o"></i>&nbsp; Vider le panier</button>
+      <div id="shopping-cart-container">
+        <table class="table shopping-cart-table">
+          <thead>
+            <tr>
+              <th></th>
+              <th>Produit</th>
+              <th>Prix unitaire</th>
+              <th>Quantité</th>
+              <th>Prix</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+        <p class="shopping-cart-total">Total: <strong id="total-amount"></strong></p>
+        <a class="btn pull-right" href="./order.html">Commander <i class="fa fa-angle-double-right"></i></a>
+        <button class="btn" id="remove-all-items-button"><i class="fa fa-trash-o"></i>&nbsp; Vider le panier</button>
       </div>
     </article>
   </main>
   <footer>
-    <p>Par Emilie Brouillard et Jessica Favin</p>
+    <p>Par Antoine Béland et Konstantinos Lambrou-Latreille</p>
   </footer>
+  <script type="text/javascript" src="./assets/js/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="./assets/scripts/utils.js"></script>
+  <script type="text/javascript" src="./assets/scripts/products.service.js"></script>
+  <script type="text/javascript" src="./assets/scripts/shopping-cart.service.js"></script>
+  <script type="text/javascript" src="./assets/scripts/shopping-cart.controller.js"></script>
 </body>
 </html>
